--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <!-- Add this inside the <head> tag of public/index.html -->
+<script src="https://accounts.google.com/gsi/client" async></script>
+
   </body>
 </html>
